--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
                     <div class="item-row ">
                         <div class="item-name">
-                            契約印（社印・角印など）の押印申請
+                            公印の押印申請
                         </div>
                         <div class="item-method">
   <a href="http://s-infsso-lwa22.kirin.co.jp/RakWF21/rkapServlet?saml=off" class="system-link" target="_blank" rel="noopener noreferrer">
