Update statistics and JustDB links in index.html

--- a/index.html
+++ b/index.html
@@ -286,11 +286,11 @@
                     <div class="stat-label">総申請項目数</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">13</div>
+                    <div class="stat-number">16</div>
                     <div class="stat-label">JustDB対応項目</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">14</div>
+                    <div class="stat-number">11</div>
                     <div class="stat-label">その他の申請方法</div>
                 </div>
             </div>
@@ -499,14 +499,12 @@
                 </div>
                 <div class="items-grid">
 
-                    <div class="item-row ">
+                    <div class="item-row justdb">
                         <div class="item-name">
-                            証明書（※保育園に提出する書類など）に関する発行依頼
+                            証明書(※保育園に提出する書類など)に関する発行依頼<span class="justdb-badge">JustDB</span>
                         </div>
                         <div class="item-method">
-  <a href="https://helpfeel.com/kirinbeer-internal-faq/%E8%A8%BC%E6%98%8E%E6%9B%B8%E7%99%BA%E8%A1%8C%E4%BE%9D%E9%A0%BC-65f7fe944f59290026e37e2a" class="chatbot-link" target="_blank" rel="noopener noreferrer">
-    Formsほか
-  </a>
+  <a href="https://kirinbeer.just-db.com/sites/home" class="justdb-link" target="_blank" rel="noopener noreferrer">JUST.DB</a>
 </div>
                         <div class="item-team team-4">④総務庶務チーム</div>
                     </div>
@@ -603,33 +601,22 @@
                 </div>
                 <div class="items-grid">
 
-                    <div class="item-row ">
+                    <div class="item-row justdb">
                         <div class="item-name">
-                            従業員および家族の慶弔対応
+                            従業員および家族の慶弔対応<span class="justdb-badge">JustDB</span>
                         </div>
                         <div class="item-method">
-  <a href="https://helpfeel.com/kirinbeer-internal-faq/%E3%80%90KHKB%E5%8E%9F%E7%B1%8D%E7%A4%BE%E5%93%A1%E3%80%91%E6%85%B6%E5%BC%94%E6%85%B0%E6%89%8B%E7%B6%9A%E3%81%8D%EF%BC%88%E7%B5%90%E5%A9%9A%E3%83%BB%E3%81%8A%E6%82%94%E3%81%BF%EF%BC%89-66025d1356bf7800248d306c" class="forms-link" target="_blank" rel="noopener noreferrer">
-    Forms【KHKB原籍社員】
-  </a> /
-  <a href="https://helpfeel.com/kirinbeer-internal-faq/%E3%80%90%E5%A5%91%E7%B4%84%E3%83%BB%E3%83%91%E3%83%BC%E3%83%88%E3%80%91%E6%85%B6%E5%BC%94%E6%85%B0%E6%89%8B%E7%B6%9A%E3%81%8D%EF%BC%88%E7%B5%90%E5%A9%9A%E3%83%BB%E3%81%8A%E6%82%94%E3%81%BF%EF%BC%89-66025d1356bf7800248d3073" class="forms-link" target="_blank" rel="noopener noreferrer">
-    Forms【契約・パート】
-  </a>
+  <a href="https://kirinbeer.just-db.com/sites/home" class="justdb-link" target="_blank" rel="noopener noreferrer">JUST.DB</a>
 </div>
-
                         <div class="item-team team-4">④総務庶務チーム</div>
                     </div>
 
-                    <div class="item-row ">
+                    <div class="item-row justdb">
                         <div class="item-name">
-                            祝電送付依頼
+                            祝電送付依頼<span class="justdb-badge">JustDB</span>
                         </div>
                         <div class="item-method">
-  <a href="https://helpfeel.com/kirinbeer-internal-faq/%E3%80%90KHKB%E5%8E%9F%E7%B1%8D%E7%A4%BE%E5%93%A1%E3%80%91%E6%85%B6%E5%BC%94%E6%85%B0%E6%89%8B%E7%B6%9A%E3%81%8D%EF%BC%88%E7%B5%90%E5%A9%9A%E3%83%BB%E3%81%8A%E6%82%94%E3%81%BF%EF%BC%89-66025d1356bf7800248d306c" class="forms-link" target="_blank" rel="noopener noreferrer">
-    Forms【KHKB原籍社員】
-  </a> /
-  <a href="https://helpfeel.com/kirinbeer-internal-faq/%E3%80%90%E5%A5%91%E7%B4%84%E3%83%BB%E3%83%91%E3%83%BC%E3%83%88%E3%80%91%E6%85%B6%E5%BC%94%E6%85%B0%E6%89%8B%E7%B6%9A%E3%81%8D%EF%BC%88%E7%B5%90%E5%A9%9A%E3%83%BB%E3%81%8A%E6%82%94%E3%81%BF%EF%BC%89-66025d1356bf7800248d3073" class="forms-link" target="_blank" rel="noopener noreferrer">
-    Forms【契約・パート】
-  </a>
+  <a href="https://kirinbeer.just-db.com/sites/home" class="justdb-link" target="_blank" rel="noopener noreferrer">JUST.DB</a>
 </div>
                         <div class="item-team team-4">④総務庶務チーム</div>
                     </div>
